[package]
name = "parity-tokio-ipc"
version = "0.9.0"
edition = "2021"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/parity-tokio-ipc"
homepage = "https://github.com/paritytech/parity-tokio-ipc"
description = """
Interprocess communication library for tokio.
"""

[dependencies]
futures = "0.3"
log = "0.4"
rand = "0.7"
tokio = { version = "1.7.0", features = ["net", "time"] }
libc = "0.2.65"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Memory"] }

[dev-dependencies]
tokio = { version = "1.7.0", features = ["io-util", "rt", "time", "macros"] }
